--- a/assets/css/sidebar.css
+++ b/assets/css/sidebar.css
@@ -398,7 +398,7 @@
   cursor: pointer;
   background-color: transparent;
   border: none;
-  padding: 18px 8px 18px 11px;
+  padding: 28px 12px 18px 19px;
   font-size: var(--sidebarFontSize);
 }
 
